--- a/src/app/component/schedule/pending-match/item.ejs
+++ b/src/app/component/schedule/pending-match/item.ejs
@@ -1,17 +1,13 @@
-<!--<component-todos-check-item--confirmed todo__from={ args .todo__from } if={ my (args .todo__from) .status === 'STARTED' } />-->
-<component-schedule-pending-match-item--applying match__from=":match" if={ my (':match') && my (':match') .status === 'PENDING_APPROVAL' && ! my (':match') .away_team } />
-<component-schedule-pending-match-item--considering match__from=":match" if={ my (':match') && my (':match') .status === 'PENDING_APPROVAL' && my (':match') .away_team } />
-<component-schedule-pending-match-item--waiting match__from=":match" if={ my (':match') && my (':match') .status === 'VERIFIED' } />
+<!--<component-todos-check-item--confirmed todo__from={ args .todo__from } if={ args .todo__from () .status === 'STARTED' } />-->
+<component-schedule-pending-match-item--applying match__from={ match } if={ match () && match () .status === 'PENDING_APPROVAL' && ! match () .away_team } />
+<component-schedule-pending-match-item--considering match__from={ match } if={ match () && match () .status === 'PENDING_APPROVAL' && match () .away_team } />
+<component-schedule-pending-match-item--waiting match__from={ match } if={ match () && match () .status === 'VERIFIED' } />
 <!--<component-check-todos-item--drawn />
 <component-check-todos-item--won />-->
 
 <script>
-    self
-        .establish ('item', constant (self .impressions (args .item__from) .thru (dropRepeatsWith, json_equal)))
+    var item = args .item__from .thru (dropRepeatsWith, json_equal)
+    var match = item
         
-        .establish (':match', dependent (function () {
-            return my ('item');
-        }, self .impressions ('item')))
-        
-    self .impressions ('item') .thru (map, noop) .thru (tap, self .render)
+    item .thru (map, noop) .thru (tap, self .render)
 </script>
