--- a/src/app/page/user/verify.ejs
+++ b/src/app/page/user/verify.ejs
@@ -1,7 +1,6 @@
 <script>
-	self
-		.impressions (args .cycle__from)
-			.thru (tap, function () {
-				window .location .hash = '#user/verify/phone-step'
-			})
+	args .cycle__from
+		.thru (tap, function () {
+			window .location .hash = '#user/verify/phone-step'
+		})
 </script>
