--- a/src/app/component/match/tabs.ejs
+++ b/src/app/component/match/tabs.ejs
@@ -11,7 +11,7 @@
 			<component-wavify />
 		</a>
 	</tab>
-	<highlight style="left: { my ('highlight-position') () }%;" />
+	<highlight style="left: { highlight_position () }%;" />
 </tabs>
 
 
@@ -72,10 +72,8 @@
 </style>
 
 <script>
-	self
-		.remembers ('tabs', ['all', 'private'])
-		
-		.remembers ('highlight-position', function () {
-			return 100 * my ('tabs') .indexOf (args .tab) / my ('tabs') .length
-		})
+	var tabs = ['all', 'private']
+	var highlight_position = function () {
+		return 100 * tabs .indexOf (args .tab) / tabs .length
+	}
 </script>
