--- a/src/app/page/schedule/upcoming.ejs
+++ b/src/app/page/schedule/upcoming.ejs
@@ -9,26 +9,26 @@
 <component-main-content>
 	<check-upcoming-matches>
 		<component-list-bar>約戰成功</component-list-bar>
-		<component-loading-item if={ my ('confirmed-matches-status') === 'loading' } />
-		<component-item if={ my ('confirmed-matches-status') === 'no-items' } >你未有確認賽事</component-item>
+		<component-loading-item if={ confirmed_matches_status () === 'loading' } />
+		<component-item if={ confirmed_matches_status () === 'no-items' } >你未有確認賽事</component-item>
 		<component-dynamic-load
 		    items_to_load=8
 		    interval_for_loading=50
-		    item_height__from=":item-height"
-		    items__from=":confirmed-matches"
+		    item_height={ item_height }
+		    items__from={ confirmed_matches }
 		>
-			<component-schedule-confirmed-match-wrap item__from=":item" />
+			<component-schedule-confirmed-match-wrap item__from={ _item .item__from } />
 		</component-dynamic-load>
 		<component-list-bar>約戰中</component-list-bar>
-		<component-loading-item if={ my ('pending-matches-status') === 'loading' } />
-		<component-item if={ my ('pending-matches-status') === 'no-items' } >你未有賽事</component-item>
+		<component-loading-item if={ pending_matches_status () === 'loading' } />
+		<component-item if={ pending_matches_status () === 'no-items' } >你未有賽事</component-item>
 		<component-dynamic-load
 		    items_to_load=13
 		    interval_for_loading=35
-		    item_height__from=":item-height"
-		    items__from=":pending-matches"
+		    item_height={ item_height }
+		    items__from={ pending_matches }
 		>
-			<component-schedule-pending-match-item item__from=":item" />
+			<component-schedule-pending-match-item item__from={ _item .item__from } />
 		</component-dynamic-load>
 	</check-upcoming-matches>
 </component-main-content>
@@ -39,80 +39,73 @@
 </style>
 
 <script>
-	self
-		.establish ('upcoming-info', function (requests) { 
-			return 	self .impressions (args .cycle__from)
-						.thru (filter, function () {
-							if (self .affiliated ('::teams'))
-								return true;
-							else
-								window .location .hash = '#login'
-						})
-						.thru (function (load) {
-							return 	from (function (list) {
-								inquire (self .affiliated ('::teams'))
-										.then (function (teams) {
-											var team_id = teams [0] .id;
-											
-											var self_hosted_matches__from = my ('::matches') (team_id);
-											var applied_matches__from = my ('::matches-applied') (team_id);
-											
-											return 	Promise .all
-														([
-															inquire (self .affiliated (self_hosted_matches__from)),
-															inquire (self .affiliated (applied_matches__from))
+	var upcoming_info =	args .cycle__from
+							.thru (filter, function () {
+								if (api () .teams)
+									return true;
+								else
+									window .location .hash = '#login'
+							})
+							.thru (function (load) {
+								return 	from (function (list) {
+									inquire (api () .teams)
+											.then (function (teams) {
+												var team_id = teams [0] .id;
+												
+												return 	Promise .all ([
+															inquire (api () .matches (team_id)),
+															inquire (api () .matches_applied (team_id))
 														]);
-										})
-										.then (function (mine_and_applied) {
-											return mine_and_applied [0] .concat (mine_and_applied [1]);
-										})
-										.then (function (upcomings) {
-											list (upcomings)
-										})
-							}) 
-						})
-						.thru (map, function (match_list) {
-							var now = new Date ();
+											})
+											.then (function (mine_and_applied) {
+												return mine_and_applied [0] .concat (mine_and_applied [1]);
+											})
+											.then (function (upcomings) {
+												list (upcomings)
+											})
+								}) 
+							})
+							.thru (map, function (match_list) {
+								var now = new Date ();
+								
+								return 	match_list
+											.filter (function (match) {
+												return now <= new Date (match .start_at)
+											}) .sort (function (a, b) {
+												return new Date (a .start_at) > new Date (b .start_at)
+											})
+							});
 							
-							return 	match_list
-										.filter (function (match) {
-											return now <= new Date (match .start_at)
-										}) .sort (function (a, b) {
-											return new Date (a .start_at) > new Date (b .start_at)
-										})
-						});
-		})
-		.impressions ('upcoming-info') .thru (map, noop) .thru (tap, self .render)
+	upcoming_info .thru (map, noop) .thru (tap, self .render)
 		
-	self
-		.establish (':confirmed-matches', constant (mechanism (function () {
-			return 	my ('upcoming-info')
-						.filter (function (match) {
-							return match .status === 'STARTED'
-						});
-		}, [self .impressions ('upcoming-info')])))
-		.establish (':pending-matches', constant (mechanism (function () {
-			return 	my ('upcoming-info')
-						.filter (function (match) {
-							return match .status === 'PENDING_APPROVAL' || match .status === 'VERIFIED'
-						});
-		}, [self .impressions ('upcoming-info')])))
-		.remembers (':item-height', function (item) {
-			return 96;
-		})
-		
-		.establish ('confirmed-matches-status', constant
-			(self .impressions (':confirmed-matches') .thru (map, function (items) {
-				if (items .length)
-					return 'loaded';
-				else
-					return 'no-items'
-			}) ('loading')))
-		.establish ('pending-matches-status', constant
-			(self .impressions (':pending-matches') .thru (map, function (items) {
-				if (items .length)
-					return 'loaded';
-				else
-					return 'no-items'
-			}) ('loading')))
+	var confirmed_matches = mechanism (function () {
+		return 	upcoming_info ()
+					.filter (function (match) {
+						return match .status === 'STARTED'
+					});
+	}, [upcoming_info])
+	var pending_matches = mechanism (function () {
+		return 	upcoming_info ()
+					.filter (function (match) {
+						return match .status === 'PENDING_APPROVAL' || match .status === 'VERIFIED'
+					});
+	}, [upcoming_info])
+	var item_height = function (item) {
+		return 96;
+	}
+	
+	var confirmed_matches_status =	confirmed_matches
+										.thru (map, function (items) {
+											if (items .length)
+												return 'loaded';
+											else
+												return 'no-items'
+										}) ('loading')
+	var pending_matches_status = pending_matches
+									.thru (map, function (items) {
+										if (items .length)
+											return 'loaded';
+										else
+											return 'no-items'
+									}) ('loading')
 </script>
