--- a/src/app/page/team/open.ejs
+++ b/src/app/page/team/open.ejs
@@ -18,14 +18,14 @@
 			<img src="https://placeholdit.imgix.net/~text?txtsize=33&amp;txt=upload%20here&amp;w=128&amp;h=128">
 		</image-holder>
 		<component-spacing height="5px" />
-		<component-field-control type="text" placeholder="請輸入球隊名稱" change__to=":name" />
+		<component-field-control type="text" placeholder="請輸入球隊名稱" change__to={ name } />
 		<component-spacing height="5px" />
-		<component-field-control type="number" placeholder="請輸入球隊平均年齡" change__to=":average-age" />
+		<component-field-control type="number" placeholder="請輸入球隊平均年齡" change__to={ average_age } />
 		<component-spacing height="5px" />
 		<component-field-control type="text" placeholder="球隊簡介(可選擇不填)" />
 		<component-spacing height="35px" />
 		<component-action>
-			<a href="#team/open/preferences-step" disabled={ ! my ('can-next') } ref="next-button">下一步</a>
+			<a href="#team/open/preferences-step" disabled={ ! can_next () } ref="next-button">下一步</a>
 		</component-action>
 	</open-team>
 </component-main-content>
@@ -56,33 +56,30 @@
 </style>
 
 <script>
-	self
-		.remembers (':name')
-		.remembers (':average-age')
+	var name = stream ();
+	var average_age = stream ();
 		
-	self
-		.establish ('can-next', constant (mechanism (function () {
-			if (! my (':name'))
-				return false;
-			if (! my (':average-age'))
-				return false;
-				
-			return true;
-		}, [
-			mergeAll ([
-				self .impressions (':name'), self .impressions (':average-age')
-			])
-		])))
-		.impressions ('can-next')
-			.thru (dropRepeats)
-			.thru (map, noop) .thru (tap, self .render)
+	var can_next = mechanism (function () {
+		if (! name ())
+			return false;
+		if (! average_age ())
+			return false;
+			
+		return true;
+	}, [
+		mergeAll ([
+			name, average_age
+		])
+	]);
+	
+	can_next
+		.thru (dropRepeats)
+		.thru (map, noop) .thru (tap, self .render)
 		
-	self
-		.establish ('next-button', ref)
-		.impressions ('next-button') .thru (tap, function (ref) {
-			ref .addEventListener ('click', function (e) {
-				e .preventDefault ();
-				window .location .hash = ref .hash  + '/#' + [my (':name'), my (':average-age')] .map (stringify) .join ('/')
-			})
+	ref ('next-button') .thru (tap, known_as ('next')) .thru (tap, function (ref) {
+		ref .addEventListener ('click', function (e) {
+			e .preventDefault ();
+			window .location .hash = ref .hash  + '/#' + [name (), average_age ()] .map (stringify) .join ('/')
 		})
+	})
 </script>
